--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
+    "express-rate-limit": "^6.0.3",
     "express-session": "^1.17.2",
+    "helmet": "^4.6.0",
     "mongodb": "^4.2.1"
   },
   "repository": {
