--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-fileupload": "^1.2.1",
     "express-rate-limit": "^6.0.3",
     "express-session": "^1.17.2",
+    "express-validator": "^6.14.0",
     "glob": "^7.2.0",
     "helmet": "^4.6.0",
     "mongodb": "^4.2.1"
